@@ -388,9 +388,7 @@ public class CombatUtil {
 				if (defenderTB.getType().equals(TownBlockType.ARENA) && attackerTB.getType().equals(TownBlockType.ARENA))
 					return true;
 
-			} catch (NotRegisteredException e) {
-				// Not a Town owned Plot
-			}
+			} catch (NotRegisteredException ignored) {}
 		}
 		return false;
 	}
@@ -414,9 +412,7 @@ public class CombatUtil {
 				return true;
 			if (residentA.getTown().getNation().hasAlly(residentB.getTown().getNation()))
 				return true;
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
 		return false;
 	}
 
@@ -436,9 +432,7 @@ public class CombatUtil {
 				return true;
 			if (a.getNation().hasAlly(b.getNation()))
 				return true;
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
 		return false;
 	}
 
@@ -545,9 +539,7 @@ public class CombatUtil {
 				return false;
 			if (nationA.hasEnemy(nationB))
 				return true;
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
 		return false;
 	}
 
@@ -588,9 +580,7 @@ public class CombatUtil {
 				return false;
 			if (residentA.getTown().getNation().hasEnemy(residentB.getTown().getNation()))
 				return true;
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
 		return false;
 	}
 
@@ -610,9 +600,7 @@ public class CombatUtil {
 				return false;
 			if (a.getNation().hasEnemy(b.getNation()))
 				return true;
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
 		return false;
 	}
 
@@ -623,12 +611,11 @@ public class CombatUtil {
 	 * @param worldCoord - Location
 	 * @return true if it is an enemy plot.
 	 */
-	public boolean isEnemyTownBlock(Player player, WorldCoord worldCoord) {
+	public static boolean isEnemyTownBlock(Player player, WorldCoord worldCoord) {
 
 		try {
 			return CombatUtil.isEnemy(TownyUniverse.getInstance().getDataSource().getResident(player.getName()).getTown(), worldCoord.getTownBlock().getTown());
-		} catch (NotRegisteredException e) {
-			return false;
-		}
+		} catch (NotRegisteredException ignored) {}
+		return false;
 	}
 }
